- Header font size fix

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,12 +2,11 @@
   <div class="container">
     <div class="box pad-box" id="header-box">
       <h1 id="title">Digital Dugnad</h1>
-      <h4 class="sale-sub-title">Selg først, betal senere - med egen nettbutikk</h4>
+      <h4 id="sale-sub-title">Selg først, betal senere - med egen nettbutikk</h4>
       <br>
-      <!--<h4 class="sale-sub-title"><strong>Over 56% fortjeneste</strong></h4>-->
       <div class="row" style="margin-top: 20px">
         <div class="col text-center">
-          <h4>Kjenn <b>kvaliteten</b> selv!</h4>
+          <h4 id="form-title">Kjenn <b>kvaliteten</b> selv!</h4>
           <app-order-sample-form></app-order-sample-form>
         </div>
       </div>
