- Updated color on block title

--- a/src/app/components/blocks/blocks.component.scss
+++ b/src/app/components/blocks/blocks.component.scss
@@ -33,7 +33,7 @@
 
       .block-title {
         display: block;
-        color: #868e96;
+        color: $gray;
         font-size: 13px;
 
         @media (max-width: 991px) {
