- Removed heroku files - Upgraded cli and angular - Updated environment variables

--- a/src/app/components/terms/terms.component.html
+++ b/src/app/components/terms/terms.component.html
@@ -4,7 +4,7 @@
 
   <h3>1. GENERELLE</h3>
   <p>1.1 Disse vilkår og betingelser ("Vilkårene") er gjeldene avtale mellom Online Dugnad AS og kjøpere i
-    kvikkdugnad.no.</p>
+    onlinedugnad.no.</p>
   <p>1.2 De følgende vilkår er tilrettelagt for alle kjøpere. Gjennom å godkjenne Online Dugnad AS sine Vilkår og
     betinglser for organisasjoner ved registrering, aksepterer du disse vilkårene.</p>
   <p>1.3 Online Dugnad AS forbeholder seg retten til å endre vilkårene uten varsel. En slik endring vil dog ikke ha
@@ -13,9 +13,9 @@
     refusjon, vennligst kontakt:</p>
 
 
-    <p>Adresse: Ullevålsveien 109A, 0359 OSLO<br>
+    <p>Adresse: Gamle Åsvei 29B, 7020 TRONDHEIM<br>
 
-    E-post: kontakt@kvikkdugnad.no<br>
+    E-post: mbrandhaug@onlinedugnad.no<br>
 
     Telefon: 926 27 081</p>
 
@@ -42,5 +42,5 @@
   <p>Denne avtalen skal reguleres av gjeldene lover for Norge.</p>
 
   <h3>7. ALDERSGRENSE FOR KJØP</h3>
-  <p>Alle kjøp i kvikkdugnad.no krever at kjøper er 18 år eller eldre</p>
+  <p>Alle kjøp i onlinedugnad.no krever at kjøper er 18 år eller eldre</p>
 </div>
