- Updated texts - Removed pagination in references - Added button to values

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -17,9 +17,8 @@
           personlig kundebehandling, både via telefon, mail og chat.</p>
 
         <h5 class="text-left" style="margin-bottom: 5px; font-weight: bolder;">Hvem er vi?</h5>
-        <p>Online Dugnad AS er etablert av tre innovative menn fra Trondheim. Dette er også de samme personene
-          som
-          jobber hver eneste dag for at du skal få den beste dugnadsopplevelsen noensinne!</p>
+        <p>Online Dugnad AS er etablert av tre innovative unge menn fra Trondheim. Dette er også de samme personene
+          som jobber hver eneste dag for at du skal få den beste dugnadsopplevelsen noensinne!</p>
       </div>
     </div>
 
