--- a/src/app/components/references/references.component.html
+++ b/src/app/components/references/references.component.html
@@ -15,10 +15,10 @@
       </div>
 
       <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
+      <!--<div class="swiper-pagination"></div>-->
       <!-- Add Arrows -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
+      <!--<div class="swiper-button-next"></div>-->
+      <!--<div class="swiper-button-prev"></div>-->
     </swiper>
   </div>
 </section>
