--- a/src/app/components/values/values.component.html
+++ b/src/app/components/values/values.component.html
@@ -9,12 +9,10 @@
         </div>
       </div>
     </div>
-    <!--<div class="row" style="margin-top: 20px;">-->
-      <!--<div class="col text-center">-->
-        <!--<a class="btn btn-primary" [routerLink]="['/digital-dugnad']"><i class="fa fa-info-circle"></i>-->
-          <!--Les mer-->
-        <!--</a>-->
-      <!--</div>-->
-    <!--</div>-->
+    <div class="text-center">
+      <a class="btn btn-primary" [routerLink]="['/digital-dugnad']"><i class="fa fa-info-circle"></i>
+        Les mer
+      </a>
+    </div>
   </div>
 </section>
